-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u201, 9
-
Component/s: client-libs
-
b94
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8219872 | openjdk8u212 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b01 |
eliminated use of the local variable "stream" but it is still declared
The Microsoft Visual C compiler then issues a warning:
c:/jprt/T/P1/210300.prrace/s//libfontmanager/freetypeScaler.c(106) : error C2220: warning treated as error - no 'object' file generated
jdk/src/java.desktop/share/native/libfontmanager/freetypeScaler.c(106) : warning C4101: 'stream' : unreferenced local variable
Since warnings are treated as errors the build then fails.
I do not know if this fails with vs2010 but it does fail on the
official VS2013 compiler.
The fix is to remove the declaration
- backported by
-
JDK-8219872 Fix for 8132985 breaks OpenJDK build on windows.
-
- Resolved
-
- duplicates
-
JDK-8140738 jdk9 owindows-i586: freetypeScaler.c: error C2220: warning treated as error - no 'object' file generated
-
- Closed
-
-
JDK-8140598 Unused variable stream in freetypeScaler.c fails compilation
-
- Closed
-
- relates to
-
JDK-8132985 Crash in freetypescaler.c due to double free
-
- Resolved
-