8139803: Fix for 8132985 breaks OpenJDK build on windows

Reviewed-by: serb, simonis